--- a/astro/src/styles/global.css
+++ b/astro/src/styles/global.css
@@ -64,6 +64,10 @@
     @apply font-khmer;
   }
 
+  html[lang="kh"] .font-cursive {
+    font-family: 'Noto Sans Khmer', sans-serif !important;
+  }
+
   h1,
   h2,
   h3,
