--- a/astro/src/components/sections/Programs.astro
+++ b/astro/src/components/sections/Programs.astro
@@ -93,7 +93,7 @@ const displayPrograms = programs?.length > 0 ? programs : defaultPrograms;
     <BambooVisual />
   </div>
 
-  <div class="container-custom relative z-20">
+  <div class="container-custom relative z-20 lg:pl-[160px]">
     <!-- Section Header -->
     <!-- Section Header -->
     <div class="max-w-4xl mb-16 md:mb-32 reveal border-l-[3px] border-primary/20 pl-6 md:pl-16">
